--- a/ui/.eslintrc
+++ b/ui/.eslintrc
@@ -1,10 +1,12 @@
 {
-  "extends": "airbnb-base",
-  "env": {
-    "node": true
-  },
-  "rules": {
-    "no-console": "off",
-    "linebreak-style": 0
-  }
+	"extends": "airbnb-base",
+	"parserOptions": {
+        "ecmaVersion": 2017
+    },
+	"rules": {
+		"react/prop-types": "off"
+	},
+	"env": {
+		"browser": true
+	}
 }
